# fastkv-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  REFERENCE.md  TODO.md
src/: handlers.rs  main.rs  models.rs  queries.rs  scylladb.rs  social_handlers.rs
static/: app.js  index.html  style.css  wallet.js
