[package]
name = "fastkv-server"
version = "2.0.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6"
dotenvy = "0.15"
fastnear-primitives = "0.1.0"
tracing = { version = "0.1.13", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-actix-web = "0.7.9"
scylla = { version = "1.4", features = ["rustls-023", "full-serialization"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-scalar = { version = "0.2", features = ["actix-web"] }
chrono = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["sync", "rt", "time"] }
time = ">=0.3, <0.3.46"  # pin: 0.3.46+ requires Rust 1.88
